[tool.poetry]
name = "poetry_locking_diff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Django = "^3.1.5"
boto3 = "^1.16.56"
Flask = "^1.1.2"
selenium = "^3.141.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
